--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-
+    compile files('libs/commons-io-2.4.jar')
 }
