--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
         android:name=".ProjectApplication"
@@ -21,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.LightActivity"></activity>
+        <activity android:name=".ui.ImageToneActivity"></activity>
 
         <activity
             android:configChanges="orientation|screenSize"
