--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     compile 'com.github.lovetuzitong:MultiImageSelector:1.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile files('libs/commons-io-2.4.jar')
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+
+
 }
