--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- For images from picasa -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ProjectApplication"
         android:allowBackup="true"
@@ -23,6 +27,13 @@
         </activity>
         <activity android:name=".ui.LightActivity"></activity>
         <activity android:name=".ui.ImageToneActivity"></activity>
+        <activity android:name=".ui.GpuDemoOne"></activity>
+        <activity android:name=".ui.ActivityGallery"></activity>
+        <activity android:name=".ui.ActivityCamera"
+            android:screenOrientation="portrait"
+            >
+
+        </activity>
 
         <activity
             android:configChanges="orientation|screenSize"
