--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile files('libs/commons-io-2.4.jar')
     compile project(':gpuimageplus')
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 }
