--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
             android:screenOrientation="portrait"
             >
         </activity>
-        <activity android:name=".ui.SeenDemo"></activity>
+        <activity android:name=".ui.SeenDemo"  android:screenOrientation="portrait"></activity>
+        <activity android:name=".ui.CropDemo"
+            android:screenOrientation="portrait"
+            >
+        </activity>
 
         <activity
             android:configChanges="orientation|screenSize"
