微调整 -  需要和hp elitebook 整合

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:screenOrientation="portrait"
             >
         </activity>
+        <activity android:name=".ui.Filter"
+            android:screenOrientation="portrait"
+            >
+        </activity>
 
         <activity
             android:configChanges="orientation|screenSize"
