--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile files('libs/commons-io-2.4.jar')
     compile project(':gpuimageplus')
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    compile 'com.lyft:scissors:1.1.1'
 }
