--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:screenOrientation="portrait"
             >
         </activity>
+        <activity android:name=".ui.GPUplusList"
+            android:screenOrientation="portrait"
+            >
+        </activity>
 
         <activity
             android:configChanges="orientation|screenSize"
